# CodeTest

./: .clang-tidy  .gitignore  ASTExperiment.h  CFGparser.h  CMakeLists.txt  README.md  configure.sh  installer_mac_linux.sh  installer_win.ps1  interval.cpp  interval.h  main.cpp  test.py
Testing/: test.cpp  test3.py  test4.py  test5.py  test6.py
cache/: expr_parse.cpp
libraries/: ASTExperiment.h  CFGparser.h  interval.h
